objects/PricebookEntry.object
<CustomObject>
    <fields>
        <fullName>Balance__c</fullName>
        <formula>(Down__c + InstalmentAmount__c)*(1- Discount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Discount</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Down__c</fullName>
        <formula>(UnitPrice *20)/100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Down</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>InstalmentAmount__c</fullName>
        <formula>(UnitPrice - Down__c )*1.05</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>InstalmentAmount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <validationRules>
        <fullName>Discount_Sales</fullName>
        <active>true</active>
        <errorConditionFormula>Discount__c &gt; 0.05</errorConditionFormula>
        <errorMessage>Discount &gt; 5%</errorMessage>
    </validationRules>
</CustomObject>